[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/placeholder enemy.png" type="Texture" id=1]
[ext_resource path="res://SwordEnemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Mobs/SwordGuard/Attack/SwordGuard_Attack-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/SwordGuard/Walk/SwordMan_Walk-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/SwordGuard/Idle/SwordGuard_Idle-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Attack",
"speed": 20.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.5, 5 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 6, 7 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 30, 11 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 5.5, 5 )

[node name="SwordEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Idle"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 4 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 15, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Sword" parent="." instance=ExtResource( 7 )]
position = Vector2( 12, -1 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" parent="Sword" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 27 )
disabled = true

[node name="DetectionZone" type="Area2D" parent="."]
position = Vector2( 38, -2 )
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 28 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.5, 4 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 29 )

[node name="ResponseTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_DetectionZone_area_entered"]
[connection signal="timeout" from="ResponseTimer" to="." method="_on_ResponseTime_timeout"]

[editable path="Sword"]
[editable path="Hurtbox"]
